--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-input-mask": "^3.0.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
